[package]
name = "twitter-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.10"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
sqlx = { version = "0.6", features = [  "runtime-tokio-native-tls", "sqlite", "macros", "chrono", "uuid" ] }
tower = "0.4.13"
clap = { version = "4.1.13", features = ["derive", "env"] }
argon2 = "0.5.0"
rand = "0.8.5"
dotenv = "0.15.0"
jwt = "0.16.0"
time = "0.3.20"
hmac = "0.12.1"
sha2 = "0.10.6"
